# CDVR

./: .gitignore  3D_sphere_64_uchar_normalized.float32  CMakeLists.txt  convert_raw_to_float.py  data.raw  data16.raw  gen.py
include/: Application.h  Camera.hpp  CameraController.h  ComputeOptimizedVisualizer.h  KDTree.h  KDTreeWrapper.h  PipelineManager.h  ShaderManager.h  SparseDataVisualizer.h  TFWidget.h  VIS2D.h  VIS3D.h  VolumeRenderingTest.h  WGSLShaderProgram.h  ggl.h  test.h  transfer_function_widget.h
shaders/: copy  perlin_cp  sparse_data.comp.wgsl  sparse_data.frag.wgsl  sparse_data.frag2.wgsl  sparse_data.vert.wgsl  volume_raycasting.frag copy.wgsl  volume_raycasting.frag.wgsl  volume_raycasting.vert copy.wgsl  volume_raycasting.vert.wgsl  volume_simple.comp.wgsl
src/: Application.cpp  CameraController.cpp  ComputeOptimizedVisualizer.cpp  KDTreeWrapper.cpp  PipelineManager.cpp  ShaderManager.cpp  SparseDataVisualizer.cpp  TFWidget.cpp  VIS2D.cpp  VIS3D.cpp  VolumeRenderingTest.cpp  WGSLShaderProgram.cpp  embed_image.cpp  impl.cpp  main.cpp  test.cpp  transfer_function_widget.cpp
test/: CMakeLists.txt  app  kdtree.cpp  main.cpp
test/kdtree/: CMakeLists.txt
test/kdtree/include/: box.hpp  builder.hpp  common.hpp  helper.hpp  kdtree.h  knn.hpp  traverse.hpp
